fix: squash bugs + refactor code

--- a/src/styles/components/_PostInfo.scss
+++ b/src/styles/components/_PostInfo.scss
@@ -19,10 +19,7 @@
 
   &__field-wrapper {
     padding-right: 0.5rem;
-
-    @include respond(tab-port) {
-      padding-bottom: 0.5rem;
-    }
+    padding-bottom: 0.5rem;
 
     &:last-child {
       padding-right: 0;
